--- a/content.htm
+++ b/content.htm
@@ -29,6 +29,9 @@
 
     <link href="../css/templatemo-pod-talk.css" rel="stylesheet">
 
+    <!-- Import element definition -->
+    <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
+
 </head>
 
 <body>
@@ -91,7 +94,8 @@
 
                     <div id="dom2">
                         <div id="loader" class="loader" style="margin: 0 auto;"></div>
-                        <object data="sample.pdf" id="article" type="application/pdf" width="100%" height="400"></object>
+                        <zero-md id="article" src=""></zero-md>
+
                     </div>
 
                 </div>
@@ -123,54 +127,6 @@
     </footer>
 
     <script>
-        let domObj = `<div class="col-lg-6 col-12 mb-4 mb-lg-0" style="margin-top: 10px;"> <div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="detail-page.html" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image img-fluid" alt=""> <a href="#" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="#" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> 10 Minutes </small> </div> <h5 class="mb-4"> <a href="detail-page.html"> Closures </a> </h5> <p class="mb-4">Advanced topic</p> </div> </div> </div>`;
-
-        function someCallback(data) {
-        }
-
-        function jsonOnLoad(callback) {
-            const raw = this.contentWindow.document.body.textContent.trim();
-            try {
-                const data = JSON.parse(raw);
-                genereteDynamicCourse(data);
-            } catch (e) {
-                console.warn(e.message);
-            }
-            this.remove();
-        }
-
-        const genereteDynamicCourse = (data) => {
-            const topic = getQueryStringParams('topic');
-            allTopics = data[topic];
-            if (allTopics.length === 0) {
-                document.getElementById("loader").hidden = true;
-            }
-            else {
-                allTopics.forEach(createItem);
-            }
-
-        }
-
-        function createItem(item, index) {
-            const url = item.url;
-            const duration = item.duration;
-            const header = item.header;
-            const description = item.description;
-            let domObj = `<div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="${url}" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image" alt=""> <a href="${url}" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="${url}" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> ${duration} </small> </div> <h5 class="mb-4"> <a href="${url}"> ${header} </a> </h5> <p class="mb-4">${description}</p> </div> </div> `;
-
-            const node = document.createElement("div");
-            node.className = "col-lg-6 col-12 mb-4 mb-lg-0";
-            node.id = 'block' + Math.floor(Math.random() * 1000000);
-            node.style.cssText = 'margin-top: 10px';
-
-            document.getElementById("dom").appendChild(node);
-
-            setTimeout(function () {
-                document.getElementById("loader").hidden = true;
-                document.getElementById(node.id).innerHTML = domObj;
-            }, 0);
-        }
-
         const changeHeaderText = () => {
             const topic = getQueryStringParams('topic');
             var headerText = '';
@@ -189,11 +145,6 @@
 
         }
 
-        const calculateBrowserHeight = () => {
-            const height = document.documentElement.clientHeight;
-            document.getElementById('article').height = height*0.7;
-        }
-
         /**
          * this function find the query strings values.
         */
@@ -209,9 +160,21 @@
             }
         }
 
+        const setArticle = () => {
+            const topic = getQueryStringParams("topic");
+            const category = getQueryStringParams("category");
+            const name = getQueryStringParams("name");
+            console.log(`/${topic}/${category}/${article}.md`);
+            document.getElementById('article').src = `/${topic}/${category}/${name}.md`;
+        }
 
+        const hideLoader = () => {
+            document.getElementById("loader").hidden = true;
+        }
+
+        setArticle();
+        hideLoader();
         changeHeaderText();
-        calculateBrowserHeight();
 
     </script>
 
@@ -222,6 +185,7 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/owl.carousel.min.js"></script>
     <script src="../js/custom.js"></script>
+
 
     <style>
         .loader {
