--- a/tutorial.htm
+++ b/tutorial.htm
@@ -159,11 +159,14 @@
         }
 
         function createItem(item, index) {
-            const url = item.url;
+            const category = item.category;
+            const name = item.name;
             const duration = item.duration;
             const header = item.header;
             const description = item.description;
-            let domObj = `<div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="${url}" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image" alt=""> <a href="${url}" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="${url}" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> ${duration} </small> </div> <h5 class="mb-4"> <a href="${url}"> ${header} </a> </h5> <p class="mb-4">${description}</p> </div> </div> `;
+            const topic = getQueryStringParams('topic');
+
+            let domObj = `<div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="/content.htm?topic=${topic}&category=${category}&name=${name}" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image" alt=""> <a href="/content.htm?topic=${topic}&category=${category}&name=${name}" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="/content.htm?topic=${topic}&category=${category}&name=${name}" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> ${duration} </small> </div> <h5 class="mb-4"> <a href="/content.htm?topic=${topic}&category=${category}&name=${name}"> ${header} </a> </h5> <p class="mb-4">${description}</p> </div> </div> `;
 
             const node = document.createElement("div");
             node.className = "col-lg-6 col-12 mb-4 mb-lg-0";
