--- a/content.htm
+++ b/content.htm
@@ -73,34 +73,22 @@
         </nav>
 
         <section class="hero-section">
-            <div class="container">
-                <div class="row">
-
-                </div>
-            </div>
         </section>
 
-        <section class="latest-podcast-section section-padding pb-0" id="section_2">
+        <section class="latest-podcast-section section-padding pb-1" id="section_2">
             <div class="container">
                 <div class="row justify-content-center" id="dom">
-
-                    <div class="col-lg-12 col-12">
-                        <div class="section-title-wrap mb-5">
-                            <a href="#">
-                                <h4 class="section-title" id="headerId"></h4>
-                            </a>
-                        </div>
-                    </div>
-
                     <div id="dom2">
                         <div id="loader" class="loader" style="margin: 0 auto;"></div>
                         <zero-md id="article" src=""></zero-md>
-
                     </div>
-
                 </div>
             </div>
         </section>
+
+        <section class="related-podcast-section section-padding">
+        </section>
+
 
     </main>
 
@@ -109,17 +97,29 @@
         <div class="container pt-5">
             <div class="row align-items-center">
 
-                <div class="col-lg-2 col-md-3 col-12">
+                <div class="col-lg-4 col-md-5 col-12">
+                    <h6 class="site-footer-title mb-3">Sadık Cihan AYAZ</h6>
+                    <h6 class="site-footer-title mb-3">Contact Me</h6>
 
+                    <ul class="social-icon">
+                        <li class="social-icon-item">
+                            <a href="https://github.com/SadikCihanAyaz" class="social-icon-link bi-github"></a>
+                        </li>
+
+                        <li class="social-icon-item">
+                            <a href="https://www.linkedin.com/in/sadikcihanayaz/" class="social-icon-link bi-linkedin"></a>
+                        </li>
+
+                    </ul>
                 </div>
 
-                <div class="col-lg-7 col-md-9 col-12">
+                <div class="col-lg-5 col-md-7 col-12">
 
                 </div>
 
                 <div class="col-lg-3 col-12">
                     </p style="font-size: 6px;"><a rel="nofollow" style="font-size: 9px; color: #f3f3f3"
-                        href="https://themewagon.com" target="_blank">Distribution Of This Template: ThemeWagon</a>
+                        href="https://themewagon.com" target="_blank">I got the this template from ThemeWagon</a>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
             var headerText = '';
 
             if (topic === 'reactJs')
-                headerText = 'React';
+                headerText = 'Return React';
             if (topic === 'javascript')
                 headerText = 'Javascript';
             if (topic === 'reactNative')
