--- a/md2.htm
+++ b/md2.htm
@@ -67,8 +67,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
                             <a href="tutorial.htm?topic=reactNative" class="custom-block-image-wrap">
-                                <img src="images/arrowRight.jpg"
-                                    class="custom-block-image img-fluid" alt="">
+                                <img src="images/arrowRight.jpg" class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
@@ -86,8 +85,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
                             <a href="tutorial.htm?topic=reactJs" class="custom-block-image-wrap">
-                                <img src="images/arrowUp.jpg"
-                                    class="custom-block-image img-fluid" alt="">
+                                <img src="images/arrowUp.jpg" class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
@@ -105,8 +103,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
                             <a href="tutorial.htm?topic=javascript" class="custom-block-image-wrap">
-                                <img src="images/arrowLeft.jpg"
-                                    class="custom-block-image img-fluid" alt="">
+                                <img src="images/arrowLeft.jpg" class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
@@ -124,8 +121,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
                             <a href="tutorial.htm?topic=nextJs" class="custom-block-image-wrap">
-                                <img src="images/arrowBottom.jpg"
-                                    class="custom-block-image img-fluid" alt="">
+                                <img src="images/arrowBottom.jpg" class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
@@ -143,23 +139,40 @@
                 </div>
             </div>
         </section>
+        <section class="related-podcast-section section-padding">
+        </section>
     </main>
+
 
 
     <footer class="site-footer">
         <div class="container pt-5">
             <div class="row align-items-center">
 
-                <div class="col-lg-2 col-md-3 col-12">
+                <div class="col-lg-4 col-md-5 col-12">
+                    <h6 class="site-footer-title mb-3">Sadık Cihan AYAZ</h6>
+                    <h6 class="site-footer-title mb-3">Contact Me</h6>
 
+                    <ul class="social-icon">
+                        <li class="social-icon-item">
+                            <a href="https://github.com/SadikCihanAyaz" class="social-icon-link bi-github"></a>
+                        </li>
+
+                        <li class="social-icon-item">
+                            <a href="https://www.linkedin.com/in/sadikcihanayaz/"
+                                class="social-icon-link bi-linkedin"></a>
+                        </li>
+
+                    </ul>
                 </div>
 
-                <div class="col-lg-7 col-md-9 col-12">
+                <div class="col-lg-5 col-md-7 col-12">
 
                 </div>
 
                 <div class="col-lg-3 col-12">
-                    </p style="font-size: 6px;"><a rel="nofollow" style="font-size: 9px; color: #f3f3f3" href="https://themewagon.com" target="_blank">Distribution Of This Template: ThemeWagon</a>
+                    </p style="font-size: 6px;"><a rel="nofollow" style="font-size: 9px; color: #f3f3f3"
+                        href="https://themewagon.com" target="_blank">I got the this template from ThemeWagon</a>
                 </div>
             </div>
         </div>
