--- a/tutorial.htm
+++ b/tutorial.htm
@@ -104,6 +104,9 @@
             </div>
         </section>
 
+        <section class="related-podcast-section section-padding">
+        </section>
+
     </main>
 
 
@@ -111,22 +114,36 @@
         <div class="container pt-5">
             <div class="row align-items-center">
 
-                <div class="col-lg-2 col-md-3 col-12">
+                <div class="col-lg-4 col-md-5 col-12">
+                    <h6 class="site-footer-title mb-3">Sadık Cihan AYAZ</h6>
+                    <h6 class="site-footer-title mb-3">Contact Me</h6>
 
+                    <ul class="social-icon">
+                        <li class="social-icon-item">
+                            <a href="https://github.com/SadikCihanAyaz" class="social-icon-link bi-github"></a>
+                        </li>
+
+                        <li class="social-icon-item">
+                            <a href="https://www.linkedin.com/in/sadikcihanayaz/"
+                                class="social-icon-link bi-linkedin"></a>
+                        </li>
+
+                    </ul>
                 </div>
 
-                <div class="col-lg-7 col-md-9 col-12">
+                <div class="col-lg-5 col-md-7 col-12">
 
                 </div>
 
                 <div class="col-lg-3 col-12">
                     </p style="font-size: 6px;"><a rel="nofollow" style="font-size: 9px; color: #f3f3f3"
-                        href="https://themewagon.com" target="_blank">Distribution Of This Template: ThemeWagon</a>
+                        href="https://themewagon.com" target="_blank">I got the this template from ThemeWagon</a>
                 </div>
             </div>
         </div>
 
     </footer>
+
 
     <script>
         let domObj = `<div class="col-lg-6 col-12 mb-4 mb-lg-0" style="margin-top: 10px;"> <div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="detail-page.html" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image img-fluid" alt=""> <a href="#" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="#" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> 10 Minutes </small> </div> <h5 class="mb-4"> <a href="detail-page.html"> Closures </a> </h5> <p class="mb-4">Advanced topic</p> </div> </div> </div>`;
