--- a/content.htm
+++ b/content.htm
@@ -107,7 +107,8 @@
                         </li>
 
                         <li class="social-icon-item">
-                            <a href="https://www.linkedin.com/in/sadikcihanayaz/" class="social-icon-link bi-linkedin"></a>
+                            <a href="https://www.linkedin.com/in/sadikcihanayaz/"
+                                class="social-icon-link bi-linkedin"></a>
                         </li>
 
                     </ul>
@@ -166,7 +167,14 @@
             const name = getQueryStringParams("name");
             console.log(window.location.hostname);
             console.log(`/${topic}/${category}/${article}.md`);
-            document.getElementById('article').src = `/${topic}/${category}/${name}.md`;
+
+            let hostName = ``;
+
+            if (window.location.hostname === 'sadikcihanayaz.github.io') {
+                hostName = `sadikcihanayaz.github.io`;
+            }
+
+            document.getElementById('article').src = hostName + `/${topic}/${category}/${name}.md`;
         }
 
         const hideLoader = () => {
