--- a/content.htm
+++ b/content.htm
@@ -174,6 +174,8 @@
                 hostName = `sadikcihanayaz.github.io`;
             }
 
+            console.log(hostName + `/${topic}/${category}/${name}.md`);
+
             document.getElementById('article').src = hostName + `/${topic}/${category}/${name}.md`;
         }
 
