--- a/content.htm
+++ b/content.htm
@@ -184,7 +184,7 @@
 
         const app = document.querySelector('zero-md')
         const run = async () => {
-            app.src = '/reactJs/basic/testReactJs.md'
+            app.src = 'https://sadikcihanayaz.github.io/reactJs/basic/testReactJs.md'
             await app.render({
                 // The class `line-numbers` will be added to the markdown-body container
                 classes: 'line-numbers',
