--- a/content.htm
+++ b/content.htm
@@ -184,6 +184,7 @@
 
         const app = document.querySelector('zero-md')
         const run = async () => {
+            console.log('work!!!!!');
             app.src = 'https://sadikcihanayaz.github.io/reactJs/basic/testReactJs.md'
             await app.render({
                 // The class `line-numbers` will be added to the markdown-body container
