--- a/content.htm
+++ b/content.htm
@@ -80,7 +80,7 @@
                 <div class="row justify-content-center" id="dom">
                     <div id="dom2">
                         <div id="loader" class="loader" style="margin: 0 auto;"></div>
-                        <zero-md></zero-md>
+                        <zero-md id="article"></zero-md>
                     </div>
                 </div>
             </div>
@@ -163,11 +163,12 @@
 
 
 
-        const app = document.querySelector('zero-md')
+        //const app = document.querySelector('zero-md')
+        const app = document.getElementById('article');
         const run = async () => {
-            console.log('work3!!!!!');
+            console.log('work4!!!!!');
 
-            app.src = '/reactJs/basic/testReactJs.md'
+            app.src = '/reactJs/basic/testReactJs.md';
             await app.render({
                 // The class `line-numbers` will be added to the markdown-body container
                 classes: 'line-numbers',
@@ -175,7 +176,6 @@
                 gfm: false,
                 mangle: false
             })
-            alert('Render complete!')
         }
         run()
 
