--- a/content.htm
+++ b/content.htm
@@ -80,7 +80,7 @@
                 <div class="row justify-content-center" id="dom">
                     <div id="dom2">
                         <div id="loader" class="loader" style="margin: 0 auto;"></div>
-                        <zero-md id="article"></zero-md>
+                        <zero-md src="/reactJs/basic/testReactJs.md" ></zero-md>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
 
 
         //const app = document.querySelector('zero-md')
-        const app = document.getElementById('article');
+        //const app = document.getElementById('article');
         const run = async () => {
             console.log('work4!!!!!');
 
@@ -177,7 +177,7 @@
                 mangle: false
             })
         }
-        run()
+        //run()
 
 
         const hideLoader = () => {
