--- a/index.html
+++ b/index.html
@@ -5,55 +5,71 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Sadık Cihan Ayaz</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
+<head>
+	<title>Sadık Cihan Ayaz</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="content">
+			<h1><a href="#">Sadık Cihan AYAZ</a></h1>
+			<h4>I'm Cihan. I, ve been working in the software industry since 2015.</h4>
+			<h4>At the beginning of my career and long period of the time I coded</h4>
+			<h4>.NET and Java for my professional work life.</h4>
+			<h4>But I decided to change my focus to the Javascript side after 2020.</h4>
+			<h4>I'm currently coding Javascript and describe myself as a Javascript developer.</h4>
+			
+			<ul class="actions">
+				<li><a href="/md2.htm" class="button primary icon solid fa-download">Read Articles</a></li>
+				<li><a href="https://www.linkedin.com/in/sadikcihanayaz/" class="button icon solid ">Contact With Me</a>
+				</li>
+				<li><a href="mailto:scayaz.19.19@gmail.com" class="button icon solid ">Send Me Email</a></li>
+			</ul>
+		</div>
+		<div class="image phone">
+			<div class="inner"><img src="images/cihan.jpeg" alt="" /></div>
+		</div>
+	</header>
+
+
+	<!-- Two -->
+	<section id="two" class="wrapper">
+		<div class="inner alt">
+			<section class="spotlight">
 				<div class="content">
-					<h1><a href="#">Sadık Cihan AYAZ</a></h1>
-					<p>Welcome my personal home page. What are you looking?  
-					<ul class="actions">
-						<li><a href="/md2.htm" class="button primary icon solid fa-download">Read Articles</a></li>
-						<li><a href="https://www.linkedin.com/in/sadikcihanayaz/" class="button icon solid ">Contact With Me</a></li>
-						<li><a href="mailto:scayaz.19.19@gmail.com" class="button icon solid ">Send Me Email</a></li>
-					</ul>
-				</div>
-				<div class="image phone"><div class="inner"><img src="images/cihan.jpeg" alt="" /></div></div>
-			</header>
-
-
-		<!-- Two -->
-			<section id="two" class="wrapper">
-				<div class="inner alt">
-					<section class="spotlight">
-						<div class="content">
-							<h3>What is the meaning of the writing of the code?</h3>
-							<p>We are just focusing the writing the code right? What the code will do can be meaningful for us according to the business types. I don't intend this point. I am trying to understand why we are actually doing that activity. I just feel that we are doing the same thing for the same purpose as the man of living ancient ages who is drawing the image on the cave.</p>
-						</div>
-					</section>
+					<h3>What is the meaning of the writing of the code?</h3>
+					<p>We are just focusing the writing the code right? What the code will do can be meaningful for us
+						according to the business types. I don't intend this point. I am trying to understand why we are
+						actually doing that activity. I just feel that we are doing the same thing for the same purpose
+						as the man of living ancient ages who is drawing the image on the cave.</p>
 				</div>
 			</section>
+		</div>
+	</section>
 
 
-		<!-- Footer -->
-			<footer id="footer">
-				
-			</footer>
+	<!-- Footer -->
+	<footer id="footer">
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</footer>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
