--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<header id="header">
 		<div class="content">
 			<h1><a href="#">Sadık Cihan AYAZ</a></h1>
-			<h4>I'm Cihan. I, ve been working in the software industry since 2015.</h4>
+			<h4>I'm Cihan. I ve been working in the software industry since 2015.</h4>
 			<h4>At the beginning of my career and long period of the time I coded</h4>
 			<h4>.NET and Java for my professional work life.</h4>
 			<h4>But I decided to change my focus to the Javascript side after 2020.</h4>
