--- a/content.htm
+++ b/content.htm
@@ -120,7 +120,7 @@
 
                 <div class="col-lg-3 col-12">
                     </p style="font-size: 6px;"><a rel="nofollow" style="font-size: 9px; color: #f3f3f3"
-                        href="https://themewagon.com" target="_blank">I got the this template from ThemeWagon</a>
+                        href="https://sadikcihanayaz.github.io/" target="_blank">@2023 Sadık Cihan AYAZ</a>
                 </div>
             </div>
         </div>
