--- a/md2.htm
+++ b/md2.htm
@@ -150,6 +150,27 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
+                        <div class="custom-block custom-block-overlay">
+                            <div id="loRomanian" class="loader" style="margin: 0 auto;"></div>
+                            <div id="loDivRomanian" hidden="true">
+                                <a href="tutorial.htm?topic=Romanian" class="custom-block-image-wrap">
+                                    <img src="images/arrowBottom.jpg" class="custom-block-image img-fluid" alt="">
+                                </a>
+
+                                <div class="custom-block-info custom-block-overlay-info">
+                                    <h5 class="mb-1">
+                                        <a href="tutorial.htm?topic=Romanian">
+                                            Romanian
+                                        </a>
+                                    </h5>
+
+                                    <p class="badge mb-0" id="RomanianArticleNumber"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -217,12 +238,16 @@
             document.getElementById('reactJsArticleNumber').innerHTML = data['reactJs'].length + " " + "Articles";
             document.getElementById('nextJsArticleNumber').innerHTML = data['nextJs'].length + " " + "Articles";
             document.getElementById('reactNativeArticleNumber').innerHTML = data['reactNative'].length + " " + "Articles";
+            document.getElementById('RomanianArticleNumber').innerHTML = data['Romanian'].length + " " + "Articles";
 
             document.getElementById('loReactJs').hidden = true;
             document.getElementById('loDivReactJs').hidden = false;
 
             document.getElementById('loNextJs').hidden = true;
             document.getElementById('loDivNextJs').hidden = false;
+
+            document.getElementById('loRomanian').hidden = true;
+            document.getElementById('loDivRomanian').hidden = false;
 
             document.getElementById('loJavascript').hidden = true;
             document.getElementById('loDivJavascript').hidden = false;
