--- a/content.htm
+++ b/content.htm
@@ -65,6 +65,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="tutorial.htm?topic=nextJs">NextJS</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tutorial.htm?topic=Romanian">Romanian</a>
+                        </li>
                         <div class="ms-4">
                             <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
                         </div>
