--- a/tutorial.htm
+++ b/tutorial.htm
@@ -62,6 +62,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="tutorial.htm?topic=nextJs">NextJS</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tutorial.htm?topic=Romanian">Romanian</a>
+                        </li>
                         <div class="ms-4">
                             <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
                         </div>
@@ -210,6 +213,8 @@
                 headerText = 'React Native';
             if (topic === 'nextJs')
                 headerText = 'nextJS';
+            if (topic === 'Romanian')
+                headerText = 'Romanian';
 
 
             document.getElementById('headerId').innerHTML = headerText;
