--- a/tutorial.htm
+++ b/tutorial.htm
@@ -65,6 +65,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="tutorial.htm?topic=Romanian">Romanian</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tutorial.htm?topic=Kubernetes">Kubernetes</a>
+                        </li>
                         <div class="ms-4">
                             <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
                         </div>
@@ -215,6 +218,8 @@
                 headerText = 'nextJS';
             if (topic === 'Romanian')
                 headerText = 'Romanian';
+            if (topic === 'Kubernetes')
+                headerText = 'Kubernetes';
 
 
             document.getElementById('headerId').innerHTML = headerText;
